# moveit_rest_client

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  app.cpp
include/: api_constants.h  cli.h  cpr_http_client.h  http_client.h  moveit_client.h  responses.h  util.h
src/: CMakeLists.txt  cli.cpp  cpr_http_client.cpp  moveit_client.cpp  util.h
tests/: CMakeLists.txt  mock_http_client.h  test_cpr_http_client.cpp  test_mock_http_client.cpp  test_moveit_client.cpp
